# DesktopAudioPlayer

./: .gitignore  CMakeLists.txt  README.md  run.bat
assets/app/: audiocontrol.rcss  default.rcss  demo.rml  sidebar.rml
include/api/: Playlist.h
include/app/: AppFileInterface.h
include/app/elements/: AudioController.h  WidgetAudioController.h
include/audio/: AudioChunk.h  AudioStream.h  SoundFileIO.h
include/audio/backends/: IAudioBackend.h  PortAudioBackend.h
include/audio/reader/: IAudioReader.h  SndlibAudioReader.h
include/audio/resampler/: IAudioResampler.h  SRAudioResampler.h
include/audio/stream/: IBasicAudioStream.h  PortAudioStream.h
include/logger/: Colors.h  LogInfoComponents.h  Logger.h
include/registry/: AudioRegistry.h  PlaylistRegistry.h  Registry.h
src/: CMakeLists.txt  main.cpp
src/api/: Playlist.cpp
src/app/: AppFileInterface.cpp
src/app/elements/: AudioController.cpp
src/audio/: AudioChunk.cpp  AudioStream.cpp  CMakeLists.txt  SoundFileIO.cpp
src/audio/backends/: PortAudioBackend.cpp
src/audio/reader/: SndlibAudioReader.cpp
src/audio/resampler/: SRAudioResampler.cpp
src/audio/stream/: PortAudioStream.cpp
src/crypt/: CMakeLists.txt  md5.cpp
src/headers/api/: AudioChunk.h  AudioData.h  AudioManager.h  AudioRegistry.h  AudioStream.h  Playlist.h  SoundFileIO.h  SoundFileReader.h
src/headers/api/buffers/: Buffer.h
src/headers/app/: App.h
src/headers/app/elements/: AudioController.h
src/headers/audio/: AudioData.h
src/headers/crypt/: md5.h
src/logger/: CMakeLists.txt  Colors.cpp  LogInfoComponents.cpp  Logger.cpp
src/registry/: AudioRegistry.cpp
src/source/api/: AudioChunk.cpp  AudioManager.cpp  AudioRegistry.cpp  AudioStream.cpp  Playlist.cpp  SoundFileIO.cpp  SoundFileReader.cpp
src/source/app/: App.cpp
src/source/app/elements/: AudioController.cpp  WidgetAudioController.cpp
src/source/audio/: AudioChunk.cpp  AudioStream.cpp  CMakeLists.txt  SoundFileIO.cpp
src/source/crypt/: CMakeLists.txt  md5.cpp
src/source/registry/: PlaylistRegistry.cpp
test/: CMakeLists.txt
test/crypt/: md5.test.cpp
